--- a/templates/root/index.tpl.pug
+++ b/templates/root/index.tpl.pug
@@ -4,5 +4,18 @@ html
     title
       | undefined
   body
+    .boot.frame
+      style(type='text/css').
+
+        body {
+          margin: 0
+        }
+
+        .boot {
+          width: 100vw;
+          height: 100vh;
+          background: black;
+        }
+
     script
       | require('./index.js');
