--- a/components/button/button.sass
+++ b/components/button/button.sass
@@ -1,10 +1,10 @@
-// Button
+// 1.1 Button - Button
 //
 // markup: button.pug
 //
 // .test - test class
 //
-// Styleguide 1
+// Styleguide 1.1
 
 .button
   width: 100px
@@ -13,8 +13,7 @@
   display: inline-block
 
   &.test
-    background-color: black
+    background-color: blue
     width: 50px
     height: 50px
     border: 0
-    border-radius: 20px
