--- a/components/registry.sass
+++ b/components/registry.sass
@@ -1,9 +1,16 @@
 
 @import 'base/color'
 @import 'base/window'
+@import 'transitions/fade-slide'
 
 // 1 Form
 //
 // Styleguide 1
-@import 'button/button'
-@import 'forms/error'
+@import 'forms/form/form'
+@import 'forms/button/button'
+@import 'forms/textfield/textfield'
+
+// 2 Custom
+//
+// Styleguide 2
+@import 'custom/loginform/loginform'
