--- a/components/base/window.sass
+++ b/components/base/window.sass
@@ -1,8 +1,9 @@
 body
   margin: 0
+  background: color(darkBack)
+  color: color(blue)
+  font-family: sans-serif
 
 .boot
   width: 100vw
   height: 100vh
-  background: color(darkBack)
-  color: color(blue)
