--- a/tpls/forms/form.tpl.pug
+++ b/tpls/forms/form.tpl.pug
@@ -1,19 +1,14 @@
-mixin form-fields(data = 'form.fields', iterator = 'field')
-  .field-wrapper(v-for=iterator + ' in ' + data)
-    .field(v-if=iterator + '.value !== undefined')
-      label(v-bind:for=iterator + '.key') {{ #{iterator}.name }}
-      input.field(v-bind:id=iterator + '.key', v-model=iterator + '.value')
-    if block
-      .fields(v-if=iterator + '.value === undefined')
-        block
-
-mixin form-actions(data = 'form.actions')
-  button(v-for='button in ' + data, v-on:click='action(button)') {{ button.name }}
-
-.form
-  .form-fields
-    block fields
-      +form-fields
-        +form-fields('field.fields', 'item')
-  .form-actions
-    +form-actions()
+.form(v-bind:id='form.id')
+  .form-content
+    block form
+      transition(name='fade-slide')
+        .form-errors(v-if='form.errors.length !== 0')
+          block errors
+            .form-error(v-for='error in form.errors')
+              .text {{ error.message }}
+      .form-fields
+        block fields
+          form-field(v-bind:field='field', v-for='field in form.fields')
+      .form-actions
+        block actions
+          a.button.action(href='#', v-for='action in form.actions', v-on:click.prevent='handleSubmit(action)') {{ action.name }}
