--- a/components/registry.sass
+++ b/components/registry.sass
@@ -5,14 +5,19 @@
 
 @import 'transitions/fade-slide'
 
-// 1 Form
+// 2 Form
 //
-// Styleguide 1
+// Styleguide 2
 @import 'forms/form/form'
 @import 'forms/button/button'
 @import 'forms/textfield/textfield'
 
-// 2 Custom
+// 3 User
 //
-// Styleguide 2
+// Styleguide 3
+@import 'user/user-panel'
+
+// 1 Custom
+//
+// Styleguide 1
 @import 'custom/loginform/loginform'
