--- a/components/registry.sass
+++ b/components/registry.sass
@@ -1,7 +1,9 @@
 
 @import 'base/color'
+@import 'base/element'
 @import 'base/window'
 @import 'base/system-messages'
+@import 'base/system-music'
 
 @import 'transitions/fade-slide'
 
